--- a/examples/pages/components/view/pages/notice-bar/index.wxml
+++ b/examples/pages/components/view/pages/notice-bar/index.wxml
@@ -5,7 +5,7 @@
   </content-card>
 
   <content-card name="通告栏类型（roll）" cardPadding="{{false}}">
-    <l-notice-bar style="margin-bottom:20rpx" type="roll" front-icon-name="notification">我是通告栏我是通告栏我是通告栏我是通告栏我是通告栏我是通告栏</l-notice-bar>
+    <l-notice-bar style="margin-bottom:20rpx" type="roll" front-icon-name="notification" content="{{content}}"></l-notice-bar>
   </content-card>
 
   <content-card name="通告栏类型（swip）" cardPadding="{{false}}">
